@@ -15,16 +15,13 @@ class Admin::SessionsController < ApplicationController
   def create
     return successful_login if allow_login_bypass? && params[:bypass_login]
     authenticate_with_open_id(params[:openid_url]) do |result, identity_url|
-      case result.status
-      when :missing
+      if result.missing?
         flash.now[:error] = "Sorry, the OpenID server couldn't be found"
-      when :canceled
+      elsif result.canceled?
         flash.now[:error] = "OpenID verification was canceled"
-      when :failed
+      elsif result.failed?
         flash.now[:error] = "Sorry, the OpenID verification failed"
-      when :invalid
-        flash.now[:error] = "Sorry, the OpenID you entered was not a valid URL"
-      when :successful
+      elsif result.successful?
         if config.author_open_ids.include?(URI.parse(identity_url))
           return successful_login
         else
