@@ -2,6 +2,11 @@ require 'uri'
 require 'openid/extensions/sreg'
 require 'openid/store/filesystem'
 
+require File.dirname(__FILE__) + '/open_id_authentication/db_store'
+require File.dirname(__FILE__) + '/open_id_authentication/mem_cache_store'
+require File.dirname(__FILE__) + '/open_id_authentication/request'
+require File.dirname(__FILE__) + '/open_id_authentication/timeout_fixes' if OpenID::VERSION == "2.0.4"
+
 module OpenIdAuthentication
   OPEN_ID_AUTHENTICATION_DIR = RAILS_ROOT + "/tmp/openids"
 
@@ -9,15 +14,22 @@ module OpenIdAuthentication
     @@store
   end
 
-  def self.store=(value)
-    @@store = value
+  def self.store=(*store_option)
+    store, *parameters = *([ store_option ].flatten)
+
+    @@store = case store
+    when :db
+      OpenIdAuthentication::DbStore.new
+    when :mem_cache
+      OpenIdAuthentication::MemCacheStore.new(*parameters)
+    when :file
+      OpenID::Store::Filesystem.new(OPEN_ID_AUTHENTICATION_DIR)
+    else
+      raise "Unknown store: #{store}"
+    end
   end
 
   self.store = :db
-
-  def store
-    OpenIdAuthentication.store
-  end
 
   class InvalidOpenId < StandardError
   end
@@ -31,21 +43,16 @@ module OpenIdAuthentication
       :setup_needed => "OpenID verification needs setup"
     }
 
-    def self.[](code, server_url = nil)
-      new(code, server_url)
+    def self.[](code)
+      new(code)
     end
 
-    def initialize(code, server_url)
+    def initialize(code)
       @code = code
-      @server_url = server_url
     end
 
     def status
       @code
-    end
-
-    def server_url
-      @server_url
     end
 
     ERROR_MESSAGES.keys.each { |state| define_method("#{state}?") { @code == state } }
@@ -77,13 +84,16 @@ module OpenIdAuthentication
       OpenIdAuthentication.normalize_url(url)
     end
 
-    # The parameter name of "openid_url" is used rather than the Rails convention "open_id_url"
+    # The parameter name of "openid_identifier" is used rather than the Rails convention "open_id_identifier"
     # because that's what the specification dictates in order to get browser auto-complete working across sites
-    def using_open_id?(identity_url = params[:openid_url]) #:doc:
+    def using_open_id?(identity_url = nil) #:doc:
+      identity_url ||= params[:openid_identifier] || params[:openid_url]
       !identity_url.blank? || params[:open_id_complete]
     end
 
-    def authenticate_with_open_id(identity_url = params[:openid_url], options = {}, &block) #:doc:
+    def authenticate_with_open_id(identity_url = nil, options = {}, &block) #:doc:
+      identity_url ||= params[:openid_identifier] || params[:openid_url]
+
       if params[:open_id_complete].nil?
         begin_open_id_authentication(identity_url, options, &block)
       else
@@ -94,10 +104,12 @@ module OpenIdAuthentication
   private
     def begin_open_id_authentication(identity_url, options = {})
       identity_url = normalize_url(identity_url)
-      return_to = options.delete(:return_to)
+      return_to    = options.delete(:return_to)
+      method       = options.delete(:method)
+
       open_id_request = open_id_consumer.begin(identity_url)
       add_simple_registration_fields(open_id_request, options)
-      redirect_to(open_id_redirect_url(open_id_request, return_to))
+      redirect_to(open_id_redirect_url(open_id_request, return_to, method))
     rescue OpenIdAuthentication::InvalidOpenId => e
       yield Result[:invalid], identity_url, nil
     rescue OpenID::OpenIDError, Timeout::Error => e
@@ -109,34 +121,22 @@ module OpenIdAuthentication
       params_with_path = params.reject { |key, value| request.path_parameters[key] }
       params_with_path.delete(:format)
       open_id_response = timeout_protection_from_identity_server { open_id_consumer.complete(params_with_path, requested_url) }
-      identity_url     = normalize_url(open_id_response.endpoint.claimed_id) if open_id_response.endpoint.claimed_id
-      server_url       = normalize_url(open_id_response.endpoint.server_url) if open_id_response.endpoint.server_url
+      identity_url     = normalize_url(open_id_response.display_identifier) if open_id_response.display_identifier
 
       case open_id_response.status
       when OpenID::Consumer::SUCCESS
-        yield Result[:successful, server_url], identity_url, OpenID::SReg::Response.from_success_response(open_id_response)
+        yield Result[:successful], identity_url, OpenID::SReg::Response.from_success_response(open_id_response)
       when OpenID::Consumer::CANCEL
-        yield Result[:canceled, server_url], identity_url, nil
+        yield Result[:canceled], identity_url, nil
       when OpenID::Consumer::FAILURE
-        yield Result[:failed, server_url], identity_url, nil
+        yield Result[:failed], identity_url, nil
       when OpenID::Consumer::SETUP_NEEDED
-        yield Result[:setup_needed, server_url], open_id_response.setup_url, nil
+        yield Result[:setup_needed], open_id_response.setup_url, nil
       end
     end
 
     def open_id_consumer
-      OpenID::Consumer.new(session, open_id_store)
-    end
-
-    def open_id_store
-      case store
-      when :db
-        OpenIdAuthentication::DbStore.new
-      when :file
-        OpenID::FilesystemStore.new(OPEN_ID_AUTHENTICATION_DIR)
-      else
-        raise "Unknown store: #{store}"
-      end
+      OpenID::Consumer.new(session, OpenIdAuthentication.store)
     end
 
     def add_simple_registration_fields(open_id_request, fields)
@@ -147,13 +147,17 @@ module OpenIdAuthentication
       open_id_request.add_extension(sreg_request)
     end
 
-    def open_id_redirect_url(open_id_request, return_to = nil)
+    def open_id_redirect_url(open_id_request, return_to = nil, method = nil)
+      open_id_request.return_to_args['_method'] = (method || request.method).to_s
       open_id_request.return_to_args['open_id_complete'] = '1'
       open_id_request.redirect_url(root_url, return_to || requested_url)
     end
 
     def requested_url
-      "#{request.protocol + request.host_with_port + request.relative_url_root + request.path}"
+      relative_url_root = self.class.respond_to?(:relative_url_root) ?
+        self.class.relative_url_root.to_s :
+        request.relative_url_root
+      "#{request.protocol + request.host_with_port + relative_url_root + request.path}"
     end
 
     def timeout_protection_from_identity_server
